# ShooterGame

./: .gitignore  Built  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  Chat.cpp  Chat.h  Client.cpp  Client.h  Console.h  Counter.h  Ememy.h  GBuffer.cpp  GBuffer.h  HUD.cpp  HUD.h  Mesh.cpp  Mesh.h  Minimap.cpp  Minimap.h  Model.cpp  Model.h  MyMesh.cpp  MyMesh.h  MyProfiler.cpp  MyProfiler.h  Profiler.cpp  Profiler.h  SSAO.cpp  SSAO.h  Shader.cpp  Shader.h  ShadowsCaster.cpp  ShadowsCaster.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Window.cpp  (+3 more)
blender/: dust.blend  dust.blend1  map.blend  map.blend1  player.blend  player.blend1  sniperRifle.blend  sniperRifle.blend1
data/meshes/: dust.mtl  g17.mtl  sniper.mtl
data/shaders/: debug.cache  debug.frag  debug.geom  debug.vert  debug_quad.frag  debug_quad.vert  depth.cache  depth.frag  depth.vert  main.frag  main.geom  main.vert  map.cache  map.frag  map.vert  pass1.cache  pass1.frag  pass1.vert  pass2.cache  pass2.frag  pass2.vert  sky.cache  sky.frag  sky.vert  ssao.cache  ssao.frag  ssaoBlur.cache  ssaoBlur.frag  ssaoBlur.vert
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_truetype.h
imgui/.github/: issue_template.md
imgui/.github/workflows/: build.yml
imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_osx.mm  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdlrenderer.cpp  imgui_impl_sdlrenderer.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h  imgui_impl_win32.cpp  imgui_impl_win32.h
imgui/docs/: BACKENDS.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  FONTS.md  README.md
imgui/examples/example_allegro5/: README.md  main.cpp
imgui/examples/example_android_opengl3/: CMakeLists.txt  main.cpp
imgui/examples/example_apple_metal/: README.md  main.mm
imgui/examples/example_apple_opengl2/: main.mm
imgui/examples/example_emscripten_opengl3/: README.md  main.cpp  shell_minimal.html
imgui/examples/example_emscripten_wgpu/: README.md  main.cpp
imgui/examples/example_glfw_metal/: main.mm
imgui/examples/example_glfw_opengl2/: main.cpp
imgui/examples/example_glfw_opengl3/: main.cpp
imgui/examples/example_glfw_vulkan/: main.cpp
imgui/examples/example_glut_opengl2/: main.cpp
imgui/examples/example_null/: main.cpp
imgui/examples/example_sdl_directx11/: main.cpp
imgui/examples/example_sdl_metal/: main.mm
imgui/examples/example_sdl_opengl2/: README.md  main.cpp
imgui/examples/example_sdl_opengl3/: README.md  main.cpp
imgui/examples/example_sdl_sdlrenderer/: README.md  main.cpp
imgui/examples/example_sdl_vulkan/: main.cpp
imgui/examples/example_win32_directx10/: main.cpp
imgui/examples/example_win32_directx11/: main.cpp
imgui/examples/example_win32_directx12/: main.cpp
imgui/examples/example_win32_directx9/: main.cpp
imgui/examples/libs/usynergy/: uSynergy.c  uSynergy.h
imgui/misc/cpp/: imgui_stdlib.cpp  imgui_stdlib.h
imgui/misc/debuggers/: imgui.natvis
imgui/misc/fonts/: binary_to_compressed_c.cpp
imgui/misc/freetype/: README.md  imgui_freetype.cpp  imgui_freetype.h
include/: Chat.h  Client.h  GBuffer.h  GameObject.h  Mesh.h  Minimap.h  Model.h  MyMesh.h  SSAO.h  ShadowsCaster.h  Skybox.h  World.h
libraries/glad/include/glad/: gl.h  glad.h
libraries/glad/src/: glad.c
libraries/glfw/docs/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_1dfd43b3952c5bc1ba15d15b12afff7b.html  dir_4351554941a2744586042c1cf3cf139a.html  dir_f6ba4c3dca55a8d4e7d63c8235e0ad43.html  dir_fda32cf7bec00275262cb8799a618f76.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html
libraries/glfw/docs/html/search/: all_0.html  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_2.html  all_2.js  all_3.html  all_5.js  (+103 more)
libraries/imgui/: imgui_demo.cpp  import.cmake
libraries/loader/include/: OBJ_Loader.h
libraries/md5/include/: md5.cpp  md5.h
libraries/profiler/include/: Remotery.h
src/: Chat.cpp  Client.cpp  GBuffer.cpp  GameObject.cpp  Mesh.cpp  Minimap.cpp  Model.cpp  MyMesh.cpp  SSAO.cpp  ShadowsCaster.cpp  Skybox.cpp  World.cpp  main.cpp
(+2 files in other folders)
